--- a/src/app/shared/common-styles/input.less
+++ b/src/app/shared/common-styles/input.less
@@ -31,3 +31,25 @@ input.ng-touched.ng-invalid {
     }
   }
 }
+
+.search-label {
+  position: relative;
+
+  .icon {
+    position: absolute;
+    top: 8px;
+    left: 2px;
+
+    &__search{
+      width: 15px;
+      height: 15px;
+    }
+  }
+
+  .input-search {
+    border: none;
+    outline: none;
+    padding: 8px 4px 8px 24px;
+    color: @color-black;
+  }
+}
