--- a/src/app/shared/common-styles/text.less
+++ b/src/app/shared/common-styles/text.less
@@ -1,5 +1,11 @@
 @import './variables.less';
 
+h2 {
+  font-size: 29px;
+  font-weight: 400;
+  color: @color-navy-blue;
+}
+
 h3 {
   font-size: 17.5px;
 }
