--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,1 +1,11 @@
-<p>admin-page works!</p>
+<div class="side-container">
+  <app-side-bar></app-side-bar>
+</div>
+<div class="main-container">
+  <app-header></app-header>
+  <main class="main-content">
+    <router-outlet></router-outlet>
+    <!-- <app-car-card> </app-car-card> -->
+  </main>
+  <app-footer></app-footer>
+</div>
