--- a/src/app/shared/components/logo/logo.component.less
+++ b/src/app/shared/components/logo/logo.component.less
@@ -14,3 +14,18 @@
     line-height: 120%;
   }
 }
+
+.logo.min-size {
+
+  .logo__img{
+
+    width: 21.5px;
+    margin-right: 7px;
+  }
+
+  .logo__title {
+
+    font-size: 16px;
+    line-height: 120%;
+  }
+}
