--- a/src/styles.less
+++ b/src/styles.less
@@ -6,6 +6,11 @@
   box-sizing: border-box;
  }
 
+ body {
+  font-family: 'Helvetica';
+  font-weight: 400;
+ }
+
 a {
   text-decoration: none;
   cursor: pointer;
