V-8 create car-view component

--- a/src/app/admin-page/pages/car-card/car-card.component.less
+++ b/src/app/admin-page/pages/car-card/car-card.component.less
@@ -1,2 +1,9 @@
 @import '../../../shared/common-styles/text.less';
 
+.page__title {
+  margin-bottom: 30px;
+}
+
+.page__content {
+  display: flex;
+}
