--- a/src/app/admin-page/side-bar/side-bar.component.html
+++ b/src/app/admin-page/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
   <div class="side-bar__header">
     <app-logo size="min"></app-logo>
   </div>
-  <div routerLink="/card" routerLinkActive="active" class="side-bar__step">
+  <div routerLink="admin/card" routerLinkActive="active" class="side-bar__step">
     <span class="step_icon">
       <svg class="icon-img">
         <use xlink:href="assets/sprite/symbol-defs.svg#pan-icon"></use>
@@ -10,7 +10,7 @@
     </span>
     Карточка автомобиля
   </div>
-  <div routerLink="/list" routerLinkActive="active" class="side-bar__step">
+  <div routerLink="admin/list" routerLinkActive="active" class="side-bar__step">
     <span class="step_icon">
       <svg class="icon-img">
         <use xlink:href="assets/sprite/symbol-defs.svg#list-icon"></use>
@@ -18,7 +18,11 @@
     </span>
     Список авто
   </div>
-  <div routerLink="/orders" routerLinkActive="active" class="side-bar__step">
+  <div
+    routerLink="admin/orders"
+    routerLinkActive="active"
+    class="side-bar__step"
+  >
     <span class="step_icon">
       <svg class="icon-img">
         <use xlink:href="assets/sprite/symbol-defs.svg#order-icon"></use>
