--- a/src/app/shared/common-styles/variables.less
+++ b/src/app/shared/common-styles/variables.less
@@ -9,6 +9,7 @@
 @color-black: #121212;
 @color-black-10: #495057;
 @color-black-20: #5A6169;
+@color-black-30: #868E96;
 
 @color-grey-10: #E9ECEF;
 @color-grey-20: #CACEDB;
