--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -5,5 +5,5 @@
   [class.max-size]="size === 'max'"
 >
   <img class="logo__img" src="./assets/img/logo.svg" alt="Logo" />
-  <h2 class="logo__title text-helvetica color-navy">Need for drive</h2>
+  <div class="logo__title text-helvetica color-navy">Need for drive</div>
 </a>
