--- a/src/app/shared/common-styles/text.less
+++ b/src/app/shared/common-styles/text.less
@@ -10,6 +10,10 @@ h3 {
   font-size: 17.5px;
 }
 
+h4 {
+  font-size: 24.5px;
+}
+
 .text-helvetica {
   font-family: 'Helvetica';
   font-weight: 400;
