--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,5 +1,15 @@
-<div class="side-container">
-  <app-side-bar></app-side-bar>
+<div class="side-container" [ngClass]="{ active: menuIsOpen }">
+  <app-side-bar class="side-menu"></app-side-bar>
+  <button class="side-bar__btn btn-icon" (click)="onMenuBtn()">
+    <svg *ngIf="!menuIsOpen; else closeIcon" class="icon-img">
+      <use xlink:href="assets/sprite/symbol-defs.svg#burger-icon"></use>
+    </svg>
+    <ng-template #closeIcon>
+      <svg class="icon-img">
+        <use xlink:href="assets/sprite/symbol-defs.svg#close-icon"></use>
+      </svg>
+    </ng-template>
+  </button>
 </div>
 <div class="main-container">
   <app-header></app-header>
