--- a/src/app/admin-page/header/header.component.html
+++ b/src/app/admin-page/header/header.component.html
@@ -22,16 +22,20 @@
       alt="notifications"
     />
   </div>
-  <div class="header__details text-helvetica" #details>
+  <div class="header__details text-helvetica" (click)="openDetails()" #details>
     <img
       class="details-img"
       src="../../../assets/img/user-avatar.jpg"
       alt="avatar"
     />
-    <span (click)="openDetails()" class="details-user">Admin</span>
+    <span class="details-user">
+      <span class="details-user__text">Admin</span>
+    </span>
 
     <div class="details-dropdown">
-      <div (click)="inOut()" class="dropdown-item">Выход</div>
+      <div (click)="inOut()" class="dropdown-item">
+        <span class="dropdown-item__text"> Выход </span>
+      </div>
     </div>
   </div>
 </header>
