--- a/src/app/admin-page/pages/car-card/car-view/car-view.component.less
+++ b/src/app/admin-page/pages/car-card/car-view/car-view.component.less
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
+  width: 100%;
   background-color: @color-white;
   border-radius: 9px;
   box-shadow: @shadow;
@@ -28,6 +28,7 @@
     justify-content: center;
     width: 100%;
     height: 110px;
+    font-size: 12px;
     color: @color-grey-40;
     background-color: @color-grey-20;
   }
@@ -43,3 +44,8 @@
   }
 }
 
+@media (max-width: 1170px) {
+  .view-name {
+    font-size: 20px;
+  }
+}
