--- a/src/app/shared/common-styles/variables.less
+++ b/src/app/shared/common-styles/variables.less
@@ -17,6 +17,7 @@
 @color-grey-40: #818EA3;
 
 @color-red-error: #C4183C;
+@color-red: #CB3656;
 
 @shadow: 0px 1px 0px rgba(90, 97, 105, 0.11), 0px 2px 4px rgba(90, 97, 105, 0.12), 0px 5px 5px rgba(90, 97, 105, 0.06), 0px 3.5px 35px rgba(90, 97, 105, 0.1);
 @shadow-right: 0px 1px 75px rgba(90, 97, 105, 0.11), 0px 2px 4px rgba(90, 97, 105, 0.12), 0px 7.5px 11px rgba(90, 97, 105, 0.1), 0px 3.5px 17.5px rgba(165, 182, 201, 0.1);
