V-8_F-9 button for input

--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -13,3 +13,8 @@
   [max]="max"
   #input
 />
+<button *ngIf="input.value != ''" (click)="onDeleteValue()" class="input__btn">
+  <svg class="close-icon">
+    <use xlink:href="assets/sprite/symbol-defs.svg#close-icon"></use>
+  </svg>
+</button>
