--- a/src/app/admin-page/pages/car-card/car-card.component.html
+++ b/src/app/admin-page/pages/car-card/car-card.component.html
@@ -1,6 +1,6 @@
 <h2 class="page__title">Карточка автомобиля</h2>
 
-<div class="page__content">
+<form class="page__content" [formGroup]="formModel">
   <app-car-view class="content-view"></app-car-view>
   <app-car-setting class="content-setting"></app-car-setting>
-</div>
+</form>
