--- a/src/app/admin-page/pages/car-card/car-setting/car-setting.component.html
+++ b/src/app/admin-page/pages/car-card/car-setting/car-setting.component.html
@@ -1,40 +1,91 @@
 <h3 class="setting__title color-navy">Настройки автомобиля</h3>
 
 <div class="setting">
-  <div class="setting__container">
+  <div class="setting__container" formGroupName="settings">
     <div class="row">
-      <app-input
-        class="set-input"
-        name="model"
-        label="Модель автомобиля"
-        (changeValue)="changeModel($event)"
-      ></app-input>
-      <app-input-select
-        class="set-input"
-        label="Тип автомобиля"
-        name="type"
-        [items]="categotyList"
-        placeholder="Выберете тип"
-        (changeValue)="changeType($event)"
-      ></app-input-select>
+      <div class="input">
+        <label class="input__label" for="model">Модель автомобиля</label>
+        <input
+          formControlName="model"
+          class="input__field"
+          type="text"
+          name="model"
+          (change)="changeModel(inputModel.value)"
+          #inputModel
+        />
+        <app-button-close
+          *ngIf="inputModel.value != ''"
+          (onClick)="settingForm.patchValue({ model: '' })"
+        ></app-button-close>
+        <div
+          [hidden]="controlIsValid('model')"
+          class="error-text text-helvetica"
+        >
+          Введите название модели
+        </div>
+      </div>
+      <div class="input">
+        <label class="input__label" for="number">Номер автомобиля</label>
+        <input
+          formControlName="number"
+          class="input__field"
+          type="text"
+          name="number"
+          (change)="changeNumber(inputNumber.value)"
+          #inputNumber
+        />
+        <app-button-close
+          *ngIf="inputNumber.value != ''"
+          (onClick)="settingForm.patchValue({ number: '' })"
+        ></app-button-close>
+        <div
+          [hidden]="controlIsValid('number')"
+          class="error-text text-helvetica"
+        >
+          Введите номер автомобиля
+        </div>
+      </div>
     </div>
+
     <div class="row">
-      <app-input
-        class="set-input"
-        name="number"
-        label="Номер автомобиля"
-        (changeValue)="changeNumber($event)"
-      ></app-input>
+      <div class="input">
+        <label class="input__label">Тип автомобиля</label>
+        <select
+          class="input__field"
+          formControlName="type"
+          (change)="changeType(selectType.value)"
+          #selectType
+        >
+          <option *ngFor="let item of categotyList">
+            {{ item }}
+          </option>
+        </select>
+      </div>
 
       <div class="colors-values">
         <div class="input-field">
-          <app-input
-            class="input_set-color"
-            name="color"
-            label="Доступные цвета"
-            placeholder="Введите цвет"
-            (changeValue)="addColor($event)"
-          ></app-input>
+          <div class="input">
+            <label class="input__label" for="color">Доступные цвета</label>
+            <input
+              formControlName="colors"
+              class="input__field"
+              type="text"
+              name="color"
+              (change)="addColor(inputColor.value)"
+              #inputColor
+            />
+            <app-button-close
+              *ngIf="inputColor.value != ''"
+              (onClick)="inputColor.value = ''"
+            ></app-button-close>
+            <div
+              [hidden]="controlIsValid('colors')"
+              class="error-text text-helvetica"
+            >
+              Добавьте цвет
+            </div>
+          </div>
+
           <button class="btn-plus btn_set-color"></button>
         </div>
         <div class="checkbox-field">
@@ -52,24 +103,47 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="daterange-container">
-        <app-input
-          class="set-input"
-          name="price-min"
-          label="Минимальная цена"
-          type="number"
-          step="10"
-          (changeValue)="changePriceMin($event)"
-        ></app-input>
-        <app-input
-          class="set-input"
-          name="price-max"
-          label="Максимальная цена"
-          type="number"
-          step="10"
-          (changeValue)="changePriceMax($event)"
-        ></app-input>
+        <div class="input">
+          <label class="input__label" for="price-min">Минимальная цена</label>
+          <input
+            formControlName="priceMin"
+            class="input__field"
+            type="number "
+            min="0"
+            step="10"
+            name="price-min"
+            (change)="changePriceMin(priceMin.value)"
+            #priceMin
+          />
+          <div
+            [hidden]="controlIsValid('priceMin')"
+            class="error-text text-helvetica"
+          >
+            Добавьте цену
+          </div>
+        </div>
+        <div class="input">
+          <label class="input__label" for="price-max">Максимальная цена</label>
+          <input
+            formControlName="priceMax"
+            class="input__field"
+            type="number "
+            min="0"
+            step="10"
+            name="price-max"
+            (change)="changePriceMin(priceMax.value)"
+            #priceMax
+          />
+          <div
+            [hidden]="controlIsValid('priceMax')"
+            class="error-text text-helvetica"
+          >
+            Добавьте цену
+          </div>
+        </div>
       </div>
     </div>
   </div>
