--- a/src/app/shared/common-styles/variables.less
+++ b/src/app/shared/common-styles/variables.less
@@ -16,6 +16,8 @@
 @color-grey-30: #ABB6BF;
 @color-grey-40: #818EA3;
 
+@color-green: #0EC261;
+
 @color-red-error: #C4183C;
 @color-red: #CB3656;
 
