--- a/src/app/admin-page/header/header.component.html
+++ b/src/app/admin-page/header/header.component.html
@@ -14,7 +14,6 @@
       />
     </label>
   </div>
-
   <div class="header__natification">
     <img
       class="notifications-img"
@@ -39,3 +38,8 @@
     </div>
   </div>
 </header>
+<app-alert
+  *ngIf="isAlert"
+  [text]="alertText"
+  [status]="alertStatus"
+></app-alert>
