--- a/src/app/auth-page/auth-page.component.html
+++ b/src/app/auth-page/auth-page.component.html
@@ -1,10 +1,8 @@
 <div>
-  <div class="logo-wrapp">
-    <app-logo></app-logo>
-  </div>
+  <app-logo></app-logo>
   <div class="auth-container">
     <h3 class="color-navy text-helvetica auth-title">Вход</h3>
-    <form action="" class="auth-form">
+    <form class="auth-form">
       <div class="input auth-input">
         <label class="input__label" for="userMail">Почта</label>
         <input
