--- a/src/app/shared/components/logo/logo.component.less
+++ b/src/app/shared/components/logo/logo.component.less
@@ -1,11 +1,17 @@
 @import '../../../shared/common-styles/variables.less';
 @import '../../common-styles/text.less';
 
+:host {
+  padding: 16px 0;
+  text-align: center;
+  display: block;
+}
+
 .logo {
   display: inline-flex;
   align-items: center;
 
-  &__img{
+  &__img {
     margin-right: 12px;
   }
 
