--- a/src/app/admin-page/pages/car-list/car-list.component.html
+++ b/src/app/admin-page/pages/car-list/car-list.component.html
@@ -1,1 +1,48 @@
-<h2>Список авто</h2>
+<h2 class="car-list_title">Список авто</h2>
+
+<div class="table_component">
+  <div class="table-filters">
+    <div class="wrapp-input">
+      <div class="input">
+        <select class="input__field" placeholder="field">
+          <option>option 1</option>
+          <option>option 2</option>
+          <option>option 3</option>
+        </select>
+      </div>
+      <div class="input">
+        <select class="input__field" placeholder="field">
+          <option>option 1</option>
+          <option>option 2</option>
+          <option>option 3</option>
+        </select>
+      </div>
+      <div class="input">
+        <select class="input__field" placeholder="field">
+          <option>option 1</option>
+          <option>option 2</option>
+          <option>option 3</option>
+        </select>
+      </div>
+    </div>
+    <div class="wrappp-btn">
+      <button class="btn btn-red">Сбросить</button>
+      <button class="btn btn-primary">Применить</button>
+    </div>
+  </div>
+
+  <table class="table">
+    <thead class="table__heading">
+      <tr>
+        <td>heading</td>
+        <td>heading</td>
+        <td>heading</td>
+        <td>heading</td>
+        <td>heading</td>
+        <td>heading</td>
+        <td>heading</td>
+        <td>heading</td>
+      </tr>
+    </thead>
+  </table>
+</div>
