--- a/src/app/admin-page/pages/car-list/car-list.component.less
+++ b/src/app/admin-page/pages/car-list/car-list.component.less
@@ -2,6 +2,7 @@
 @import '../../../shared/common-styles/button.less';
 @import '../../../shared/common-styles/variables.less';
 @import '../../../shared/common-styles/input.less';
+@import '../../../shared/common-styles/table.less';
 
 .car-list_title {
   margin-bottom: 30px;
@@ -27,20 +28,9 @@
   }
 
   .table {
-    width: 100%;
-
-    .table__heading {
-
-    }
-
-    td {
-      padding: 11px 0;
-      text-align: center;
-    }
+    min-height: 398px;
   }
 }
-
-
 
 .btn-red, .input {
   margin-right: 15px;
